--- a/WebContent/WEB-INF/zul/runtime/indices.zul
+++ b/WebContent/WEB-INF/zul/runtime/indices.zul
@@ -14,9 +14,9 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="index"
-	use="com.jaeksoft.searchlib.web.controller.runtime.IndexController">
-	<grid model="@{index.indices}">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('index') @init('com.jaeksoft.searchlib.web.controller.runtime.IndexController')">
+	<grid model="@load(index.indices)">
 		<auxhead>
 			<auxheader colspan="3" label="Cache" align="center" />
 			<auxheader colspan="3" />
@@ -47,21 +47,26 @@
 			<column />
 		</columns>
 		<rows>
-			<row self="@{each=index}">
-				<label value="@{index.indexConfig.searchCache}" />
-				<label value="@{index.indexConfig.filterCache}" />
-				<label value="@{index.indexConfig.fieldCache}" />
-				<label value="@{index.indexConfig.remoteUri}" />
-				<label value="@{index.indexConfig.keyField}" />
-				<label value="@{index.indexConfig.keyMd5RegExp}" />
-				<label value="@{index.statistics.numDocs}" />
-				<label value="@{index.statistics.maxDoc}" />
-				<label value="@{index.statistics.deletions}" />
-				<label value="@{index.statistics.numDeletedDocs}" />
-				<label value="@{index.statistics.optimized}" />
-				<label value="@{index.indexConfig.readWriteMode}" />
-				<label value="" />
-			</row>
+			<template name="model" var="index">
+				<row>
+					<label value="@load(index.indexConfig.searchCache)" />
+					<label value="@load(index.indexConfig.filterCache)" />
+					<label value="@load(index.indexConfig.fieldCache)" />
+					<label value="@load(index.indexConfig.remoteUri)" />
+					<label value="@load(index.indexConfig.keyField)" />
+					<label
+						value="@load(index.indexConfig.keyMd5RegExp)" />
+					<label value="@load(index.statistics.numDocs)" />
+					<label value="@load(index.statistics.maxDoc)" />
+					<label value="@load(index.statistics.deletions)" />
+					<label
+						value="@load(index.statistics.numDeletedDocs)" />
+					<label value="@load(index.statistics.optimized)" />
+					<label
+						value="@load(index.indexConfig.readWriteMode.label)" />
+					<label value="" />
+				</row>
+			</template>
 		</rows>
 	</grid>
 </window>
