--- a/WebContent/WEB-INF/zul/runtime/system.zul
+++ b/WebContent/WEB-INF/zul/runtime/system.zul
@@ -14,8 +14,8 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="system"
-	use="com.jaeksoft.searchlib.web.controller.runtime.SystemController">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('system') @init('com.jaeksoft.searchlib.web.controller.runtime.SystemController')">
 	<tabbox>
 		<tabs>
 			<tab id="tabSystemGeneral" label="General" selected="true" />
@@ -24,11 +24,6 @@
 		<tabpanels>
 			<tabpanel>
 				<grid>
-					<auxhead>
-						<auxheader colspan="3" align="center">
-							<button label="Refresh" forward="onReload" />
-						</auxheader>
-					</auxhead>
 					<columns>
 						<column label="Variable" align="right"
 							width="20%" />
@@ -38,93 +33,96 @@
 					<rows>
 						<row>
 							<label value="Version" />
-							<label value="@{system.monitor.version}" />
+							<label
+								value="@load(system.monitor.version)" />
 							<label
 								value="The running OpenSearchServer version" />
 						</row>
 						<row>
 							<label value="Available processors" />
 							<label
-								value="@{system.monitor.availableProcessors}" />
+								value="@load(system.monitor.availableProcessors)" />
 							<label
 								value="The maximum number of processors available to the virtual machine" />
 						</row>
 						<row>
 							<label value="Free memory" />
 							<label
-								value="@{system.monitor.freeMemory,converter='com.jaeksoft.searchlib.web.converter.SizeConverter'}" />
+								value="@load(system.monitor.freeMemory) @converter('com.jaeksoft.searchlib.web.converter.SizeConverter')" />
 							<label
 								value="The amount of free memory in the Java Virtual Machine" />
 						</row>
 						<row>
 							<label value="Free memory rate" />
 							<label
-								value="@{system.monitor.memoryRate,converter='com.jaeksoft.searchlib.web.converter.PercentConverter'}" />
+								value="@load(system.monitor.memoryRate) @converter('com.jaeksoft.searchlib.web.converter.PercentConverter')" />
 							<label
 								value="The rate of free memory in the Java Virtual Machine" />
 						</row>
 						<row>
 							<label value="Max memory" />
 							<label
-								value="@{system.monitor.maxMemory,converter='com.jaeksoft.searchlib.web.converter.SizeConverter'}" />
+								value="@load(system.monitor.maxMemory) @converter('com.jaeksoft.searchlib.web.converter.SizeConverter')" />
 							<label
 								value="The maximum amount of memory that the Java virtual machine will attempt to use" />
 						</row>
 						<row>
 							<label value="Total memory" />
 							<label
-								value="@{system.monitor.totalMemory,converter='com.jaeksoft.searchlib.web.converter.SizeConverter'}" />
+								value="@load(system.monitor.totalMemory) @converter('com.jaeksoft.searchlib.web.converter.SizeConverter')" />
 							<label
 								value="The total amount of memory in the Java virtual machine" />
 						</row>
 						<row>
 							<label value="Data directory path" />
 							<label
-								value="@{system.monitor.dataDirectoryPath}" />
+								value="@load(system.monitor.dataDirectoryPath)" />
 							<label
 								value="The location of the directory containing the indices" />
 						</row>
 						<row>
 							<label value="Free disk space" />
 							<label
-								value="@{system.monitor.freeDiskSpace,converter='com.jaeksoft.searchlib.web.converter.SizeConverter'}" />
+								value="@load(system.monitor.freeDiskSpace) @converter('com.jaeksoft.searchlib.web.converter.SizeConverter')" />
 							<label
 								value="The free space on a drive or volume" />
 						</row>
 						<row>
 							<label value="Disk space rate" />
 							<label
-								value="@{system.monitor.diskRate,converter='com.jaeksoft.searchlib.web.converter.PercentConverter'}" />
+								value="@load(system.monitor.diskRate) @converter('com.jaeksoft.searchlib.web.converter.PercentConverter')" />
 							<label
 								value="The rate of free space on a drive or volume" />
 						</row>
 						<row>
 							<label value="Total disk space" />
 							<label
-								value="@{system.monitor.totalDiskSpace,converter='com.jaeksoft.searchlib.web.converter.SizeConverter'}" />
+								value="@load(system.monitor.totalDiskSpace) @converter('com.jaeksoft.searchlib.web.converter.SizeConverter')" />
 							<label
 								value="The total space on a drive or volume" />
 						</row>
 						<row>
 							<label value="Index count" />
-							<label value="@{system.monitor.indexCount}" />
+							<label
+								value="@load(system.monitor.indexCount)" />
 							<label value="The total number of indices" />
 						</row>
-						<row visible="@{system.apiRateLimit}">
+						<row visible="@load(system.apiRateLimit)">
 							<label value="API call wait rate" />
 							<label
-								value="@{system.monitor.apiWaitRate,converter='com.jaeksoft.searchlib.web.converter.PercentConverter'}" />
+								value="@load(system.monitor.apiWaitRate) @converter('com.jaeksoft.searchlib.web.converter.PercentConverter')" />
 							<label value="The rate of waiting API call" />
 						</row>
-						<row visible="@{system.requestPerMonthLimit}">
+						<row
+							visible="@load(system.requestPerMonthLimit)">
 							<label value="Request per month" />
 							<cell>
 								<label style="color:red;"
-									visible="@{system.monitor.requestPerMonthOver}"
-									value="@{system.monitor.requestPerMonthLabel}" />
+									visible="@load(system.monitor.requestPerMonthOver)"
+									value="@load(system.monitor.requestPerMonthLabel)" />
 								<label
-									visible="@{system.monitor.requestPerMonthUnder}"
-									value="@{system.monitor.requestPerMonthLabel}" />
+									visible="@load(system.monitor.requestPerMonthUnder)"
+									value="@load(system.monitor.requestPerMonthLabel)" />
 							</cell>
 							<label
 								value="The number of request during the current month" />
@@ -133,18 +131,20 @@
 				</grid>
 			</tabpanel>
 			<tabpanel>
-				<grid model="@{system.monitor.properties}" mold="paging"
-					pageSize="20">
+				<grid model="@load(system.monitor.properties)"
+					mold="paging" pageSize="20">
 					<columns>
 						<column label="Property" width="30%"
 							align="right" />
 						<column label="Value" />
 					</columns>
 					<rows>
-						<row self="@{each='prop'}">
-							<label value="@{prop.key}" />
-							<label value="@{prop.value}" />
-						</row>
+						<template name="model" var="prop">
+							<row>
+								<label value="@load(prop.key)" />
+								<label value="@load(prop.value)" />
+							</row>
+						</template>
 					</rows>
 				</grid>
 			</tabpanel>
