OpenSearchController works with new MVVM model

--- a/WebContent/WEB-INF/zul/runtime/opensearch.zul
+++ b/WebContent/WEB-INF/zul/runtime/opensearch.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2011 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2011-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -14,80 +14,91 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="opensearch" border="none"
-	use="com.jaeksoft.searchlib.web.controller.runtime.OpenSearchController">
-<grid>
+<window border="none" apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('opensearch') @init('com.jaeksoft.searchlib.web.controller.runtime.OpenSearchController')">
+	<grid>
 		<columns>
-			<column align="right" width="30%"/>
+			<column align="right" width="30%" />
 			<column align="left" />
-			 
 		</columns>
 		<rows>
-		 
 			<row>
 				<label value="Select the query template" />
-				<combobox id="searchRequest" model="@{opensearch.requestList}"  onSelect="opensearch.onReload()" width="200px" selectedItem="@{opensearch.searchTemplate}" readonly="true"/>
+				<combobox model="@load(opensearch.requestList)"
+					width="200px" selectedItem="@bind(opensearch.searchTemplate)"
+					readonly="true">
+					<template name="model">
+						<comboitem label="@load(each)" />
+					</template>
+				</combobox>
 				<space />
 			</row>
-				<row>
+			<row>
 				<label value="Map the fields for OpenSearch" />
-				 		<listbox model="@{opensearch.list}" id="openSearchFields">
-		<listhead>
-			<listheader label="Field/Snippets" />
-			<listheader label="OpenSearch Fields" />
-			<listheader label="Action" />
-		</listhead>
-				<auxhead>
-					<auxheader>
-					<listbox
-						model="@{opensearch.fields}"
-						selectedItem="@{opensearch.fieldType}"
-						onSelect="opensearch.onReload()" 
-						mold="select" />
-							<listbox
-								model="@{opensearch.fieldList}"
-								selectedItem="@{opensearch.currentField}"
-								mold="select" />
-					</auxheader>
-					<auxheader>
-					<combobox
-								model="@{opensearch.openSearchFields}"
-								selectedItem="@{opensearch.currentOpenSearchField}" readonly="true"
-								 />
-					</auxheader>
-					<auxheader>
-						
-								<button tooltiptext="Add a field"
-										image="/images/action_add.png"
-										onClick="opensearch.onAdd()" />
-					</auxheader>
-				</auxhead>
-		 <listitem self="@{each='openSearchFieldList'}" value="@{list}" >  
-        <listcell label="@{openSearchFieldList.field}" />
-        <listcell label="@{openSearchFieldList.openSearchField}" />
-        <listcell>
-  		<button image="/images/action_delete.png" id="deleteField" forward="onClick=onDelete()">
-                <custom-attributes fieldId="@{openSearchFieldList.openSearchField}" />
-		</button>
-                </listcell>                
-     </listitem>
-	</listbox>
+				<listbox model="@load(opensearch.list)">
+					<listhead>
+						<listheader label="Field/Snippets" />
+						<listheader label="OpenSearch Fields" />
+						<listheader label="Action" />
+					</listhead>
+					<auxhead>
+						<auxheader>
+							<listbox model="@load(opensearch.fields)"
+								selectedItem="@bind(opensearch.fieldType)" mold="select">
+								<template name="model">
+									<listitem label="@load(each)" />
+								</template>
+							</listbox>
+							<listbox model="@load(opensearch.fieldList)"
+								selectedItem="@bind(opensearch.currentField)" mold="select">
+								<template name="model">
+									<listitem label="@load(each)" />
+								</template>
+							</listbox>
+						</auxheader>
+						<auxheader>
+							<combobox
+								model="@load(opensearch.openSearchFields)"
+								selectedItem="@bind(opensearch.currentOpenSearchField)"
+								readonly="true">
+								<template name="model">
+									<comboitem label="@load(each)" />
+								</template>
+							</combobox>
+						</auxheader>
+						<auxheader>
+							<button tooltiptext="Add a field"
+								image="/images/action_add.png" onClick="@command('onAdd')" />
+						</auxheader>
+					</auxhead>
+					<template name="model" var="openSearchFieldList">
+						<listitem>
+							<listcell
+								label="@load(openSearchFieldList.field)" />
+							<listcell
+								label="@load(openSearchFieldList.openSearchField)" />
+							<listcell>
+								<button
+									image="/images/action_delete.png"
+									onClick="@command('onDelete', openSearchField=openSearchFieldList.openSearchField)" />
+							</listcell>
+						</listitem>
+					</template>
+				</listbox>
 				<space />
 			</row>
-	 	
 		</rows>
 		<foot>
-		<footer span="2">
-	<vbox width="100%" align="center">
-	<hbox>
-	   <button tooltiptext="Save" id="openSearchsave" label="Save" 	 onClick="opensearch.onSave()" />
-		<button tooltiptext="View" id="openSearchview" label="View" href="@{opensearch.requestApiCall}"/>
-	</hbox>
-    </vbox>
-		</footer>
+			<footer span="2">
+				<vbox width="100%" align="center">
+					<hbox>
+						<button tooltiptext="Save" label="Save"
+							onClick="@command('onSave')" />
+						<button tooltiptext="View" label="View"
+							href="@load(opensearch.requestApiCall)" />
+					</hbox>
+				</vbox>
+			</footer>
 		</foot>
-</grid>		
-
-			 
-	
+	</grid>
 </window>
